# torch2jax

./: .gitignore  README.md  flake.nix  publish_to_pypi.sh  pyproject.toml
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_all_the_things.py  test_core.py  test_dtypes.py  test_models.py  test_randomness.py  test_torch_nn.py  utils.py
torch2jax/: __init__.py
