[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torch2jax"
# Don't forget to also update the version in flake.nix!
version = "0.1.0"
authors = [
  { name="Samuel Ainsworth", email="skainsworth@gmail.com" },
]
description = "Run PyTorch in JAX. 🤝"
readme = "README.md"
dependencies = ["jax", "torch"]

[project.urls]
"Homepage" = "https://github.com/samuela/torch2jax"
"Bug Tracker" = "https://github.com/samuela/torch2jax/issues"

[tool.setuptools]
packages = ["torch2jax"]

[tool.ruff]
# Enable the isort rules. See https://github.com/astral-sh/ruff/issues/465#issuecomment-1783684428.
lint.extend-select = ["I"]

# E731 Do not assign a `lambda` expression, use a `def`
lint.ignore = ["E731"]
indent-width = 2
line-length = 120
